Fixed some layout bugs & coloring issues.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2308,9 +2308,6 @@ input:checked + .toggle-bg{
 .col-span-1{
   grid-column: span 1 / span 1;
 }
-.row-span-1{
-  grid-row: span 1 / span 1;
-}
 .-m-4{
   margin: -1rem;
 }
@@ -2372,10 +2369,6 @@ input:checked + .toggle-bg{
 .my-8{
   margin-top: 2rem;
   margin-bottom: 2rem;
-}
-.my-auto{
-  margin-top: auto;
-  margin-bottom: auto;
 }
 .-mb-px{
   margin-bottom: -1px;
@@ -2467,9 +2460,6 @@ input:checked + .toggle-bg{
 }
 .mt-8{
   margin-top: 2rem;
-}
-.mt-0{
-  margin-top: 0px;
 }
 .block{
   display: block;
@@ -2605,9 +2595,6 @@ input:checked + .toggle-bg{
 .h-screen-no-nav{
   height: calc(100vh - 3rem);
   height: calc(var(--screen-height, 100vh) - var(--height-nav));
-}
-.h-12{
-  height: 3rem;
 }
 .max-h-0{
   max-height: 0px;
@@ -2893,12 +2880,6 @@ input:checked + .toggle-bg{
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-.grid-cols-4{
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
 .grid-rows-\[1fr_auto\]{
   grid-template-rows: 1fr auto;
 }
@@ -3064,9 +3045,6 @@ input:checked + .toggle-bg{
 }
 .justify-self-start{
   justify-self: start;
-}
-.justify-self-center{
-  justify-self: center;
 }
 .overflow-auto{
   overflow: auto;
@@ -6098,14 +6076,6 @@ shop-pay-button {
     height: 1.75rem;
   }
 
-  .sm\:h-14{
-    height: 3.5rem;
-  }
-
-  .sm\:h-16{
-    height: 4rem;
-  }
-
   .sm\:w-10{
     width: 2.5rem;
   }
@@ -6362,14 +6332,6 @@ shop-pay-button {
   .md\:h-screen{
     height: 100vh;
     height: var(--screen-height, 100vh);
-  }
-
-  .md\:h-24{
-    height: 6rem;
-  }
-
-  .md\:h-16{
-    height: 4rem;
   }
 
   .md\:max-h-fit{
@@ -6696,14 +6658,6 @@ shop-pay-button {
     margin-top: 1.5rem;
   }
 
-  .lg\:mt-4{
-    margin-top: 1rem;
-  }
-
-  .lg\:mt-8{
-    margin-top: 2rem;
-  }
-
   .lg\:block{
     display: block;
   }
@@ -6724,24 +6678,12 @@ shop-pay-button {
     aspect-ratio: 3/2;
   }
 
-  .lg\:h-48{
-    height: 12rem;
-  }
-
   .lg\:h-24{
     height: 6rem;
   }
 
-  .lg\:h-40{
-    height: 10rem;
-  }
-
-  .lg\:h-32{
-    height: 8rem;
-  }
-
-  .lg\:h-28{
-    height: 7rem;
+  .lg\:h-48{
+    height: 12rem;
   }
 
   .lg\:grid-cols-2{
@@ -6894,10 +6836,6 @@ shop-pay-button {
 
   .xs\:mt-0{
     margin-top: 0px;
-  }
-
-  .xs\:h-16{
-    height: 4rem;
   }
 }
 @media (max-width: 48em){
